# dicom-extractor

./: .gitignore  CMakeLists.txt  README.md  rename.sh
source/: CMakeLists.txt  config.h.in  dir.cpp  dir.h  main.cpp
source/dicom/: date_field.cpp  date_field.h  dicom.cpp  dicom.h  encoding_converter.cpp  encoding_converter.h  field.cpp  field.h  integer_field.cpp  integer_field.h  name_field.cpp  name_field.h
test/: CMakeLists.txt  config.h.in  main.cpp
test/data/: 10_21_16_57_1-cut.dcm  1_16_37_40_1-cut.dcm  21_20_15_27_2-cut.dcm  28_10_14_45_1-cut.dcm  31_16_16_31_1-cut.dcm  8_13_10_55_1-cut.dcm
